--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --blue-5: #f0f3f9;
   --white: #fff;
   --white-03: rgba(255, 255, 255, 0.03);
+  --red: #ff7070;
 
   /* app */
   --font-primary: 'Nunito Sans', sans-serif;
