--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --black-10: #f9f9f9;
   --blue-5: #f0f3f9;
   --white: #fff;
+  --white-80: rgba(255, 255, 255, 0.8);
   --white-03: rgba(255, 255, 255, 0.03);
   --red: #ff7070;
 
