--- a/src/components/Page/TryAppSection/try_app_section.module.css
+++ b/src/components/Page/TryAppSection/try_app_section.module.css
@@ -45,3 +45,12 @@
 .tryapp_card ul {
   display: grid;
 }
+
+@media (min-width: 720px) {
+  .tryapp_title {
+    font: normal normal 900 2.5rem/3rem var(--font-primary);
+  }
+  .tryapp_text {
+    font: normal normal 400 1.2rem/1.5rem var(--font-primary);
+  }
+}
