--- a/src/components/Page/TryAppSection/try_app_section.module.css
+++ b/src/components/Page/TryAppSection/try_app_section.module.css
@@ -28,6 +28,7 @@
   align-items: center;
   justify-content: center;
   margin: 7rem 0;
+  flex-direction: column;
 }
 .tryapp_card {
   display: flex;
@@ -102,5 +103,10 @@
   }
   .tryapp_text {
     font: normal normal 400 1.2rem/1.5rem var(--font-primary);
+  }
+}
+@media (min-width: 920px) {
+  .tryapp_cards {
+    flex-direction: row;
   }
 }
