:recycle: Refactor code of QuestionCard component.

--- a/src/components/Page/QuestionCard/question_card.module.css
+++ b/src/components/Page/QuestionCard/question_card.module.css
@@ -1,6 +1,5 @@
 .card {
   width: 100%;
-  position: relative;
 }
 .card_title {
   width: 100%;
@@ -9,7 +8,7 @@
   align-items: center;
 }
 .card h6 {
-  font: normal normal 600 1.2rem/1.5rem var(--font-primary);
+  font: normal normal 700 1.1rem/1.5rem var(--font-primary);
   color: var(--black-100);
 }
 .card button {
@@ -17,11 +16,20 @@
   border-radius: 3rem;
   display: flex;
   place-items: center;
+  background-color: transparent;
+}
+.card div {
+  width: 100%;
 }
 .card svg {
   stroke: var(--blue);
 }
 .card p {
-  font: normal normal 400 1rem/1.2rem var(--font-primary);
+  height: auto;
+  font: normal normal 400 1rem/1.5rem var(--font-primary);
   color: var(--black-70);
+  text-align: left;
+  margin-top: 1rem;
+  overflow: hidden;
+  transition: 0.3s;
 }
