--- a/src/components/Page/QuestionSection/question_section.module.css
+++ b/src/components/Page/QuestionSection/question_section.module.css
@@ -4,6 +4,7 @@
   display: grid;
   place-items: center;
   margin-top: 5rem;
+  margin-bottom: 8rem;
 }
 .section h2 {
   font: normal normal 900 1.5rem/2rem var(--font-primary);
@@ -12,7 +13,7 @@
   padding: 0 2rem;
   max-width: 50rem;
 }
-.section p {
+.section_text {
   font: normal normal 400 0.8rem/1rem var(--font-primary);
   color: var(--black-70);
   text-align: center;
@@ -23,13 +24,14 @@
 .section_question {
   display: grid;
   place-items: start;
-  max-width: 500px;
+  max-width: 600px;
+  margin-top: 5rem;
 }
 @media (min-width: 720px) {
   .section h2 {
     font: normal normal 900 2.5rem/3rem var(--font-primary);
   }
-  .section p {
+  .section_text {
     font: normal normal 400 1.2rem/1.5rem var(--font-primary);
   }
 }
