--- a/src/components/Page/QuestionCard/question_card.module.css
+++ b/src/components/Page/QuestionCard/question_card.module.css
@@ -1,5 +1,7 @@
 .card {
   width: 100%;
+  padding: 1.5rem 0;
+  border-bottom: 1px solid var(--black-10)
 }
 .card_title {
   width: 100%;
@@ -17,6 +19,7 @@
   display: flex;
   place-items: center;
   background-color: transparent;
+  transition: 0.3s;
 }
 .card div {
   width: 100%;
@@ -31,5 +34,7 @@
   text-align: left;
   margin-top: 1rem;
   overflow: hidden;
-  transition: 0.3s;
+}
+.--active{
+  rotate: 180deg;
 }
