--- a/src/components/Page/QuestionSection/question_section.module.css
+++ b/src/components/Page/QuestionSection/question_section.module.css
@@ -3,8 +3,7 @@
   max-width: 1200px;
   display: grid;
   place-items: center;
-  margin-top: 5rem;
-  margin-bottom: 8rem;
+  margin: 5rem 0 10rem;
 }
 .section h2 {
   font: normal normal 900 1.5rem/2rem var(--font-primary);
@@ -25,6 +24,7 @@
   display: grid;
   place-items: start;
   max-width: 600px;
+  width: 100%;
   margin-top: 5rem;
 }
 @media (min-width: 720px) {
