--- a/src/components/Page/KnowInterface/know_interface.module.css
+++ b/src/components/Page/KnowInterface/know_interface.module.css
@@ -22,6 +22,7 @@
 }
 .section_box {
   width: 100%;
+  overflow: hidden;
   margin-top: 4rem;
   display: flex;
   justify-content: center;
@@ -50,6 +51,9 @@
   }
   .section_title {
     font: normal normal 900 2.5rem/3rem var(--font-primary);
+  }
+  .section_box{
+    overflow: unset;
   }
 }
 @media (min-width: 630px) {
