--- a/src/components/Page/QuestionCard/question_card.module.css
+++ b/src/components/Page/QuestionCard/question_card.module.css
@@ -10,7 +10,7 @@
   align-items: center;
 }
 .card h6 {
-  font: normal normal 700 1.1rem/1.5rem var(--font-primary);
+  font: normal normal 700 1rem/1.5rem var(--font-primary);
   color: var(--black-100);
 }
 .card button {
@@ -29,7 +29,7 @@
 }
 .card p {
   height: auto;
-  font: normal normal 400 1rem/1.5rem var(--font-primary);
+  font: normal normal 400 0.8rem/1rem var(--font-primary);
   color: var(--black-70);
   text-align: left;
   margin-top: 1rem;
@@ -37,4 +37,12 @@
 }
 .--active{
   rotate: 180deg;
+}
+@media (min-width: 720px) {
+  .card h6{
+    font: normal normal 700 1.1rem/1.5rem var(--font-primary);
+  }
+  .card p{
+  font: normal normal 400 1rem/1.5rem var(--font-primary);
+  }
 }
