--- a/src/components/Page/QuestionSection/question_section.module.css
+++ b/src/components/Page/QuestionSection/question_section.module.css
@@ -23,8 +23,9 @@
 .section_question {
   display: grid;
   place-items: start;
-  max-width: 600px;
+  max-width: 720px;
   width: 100%;
+  padding: 0 3rem;
   margin-top: 5rem;
 }
 @media (min-width: 720px) {
