--- a/src/components/App/NavApp/nav_app.module.css
+++ b/src/components/App/NavApp/nav_app.module.css
@@ -1,5 +1,9 @@
 .header {
   width: 100%;
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100
 }
 .header_nav {
   display: flex;
