--- a/src/components/App/ScreenOne/screen_one.module.css
+++ b/src/components/App/ScreenOne/screen_one.module.css
@@ -4,8 +4,7 @@
   box-shadow: 0px 4px 5px 3px rgba(0, 0, 0, 0.05);
   border-radius: 40px 40px 0px 0px;
   width: 100%;
-  margin: 1rem 1rem 0 1.5rem;
   position: relative;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
 }
