--- a/src/components/App/ScreenTwo/screen_two.module.css
+++ b/src/components/App/ScreenTwo/screen_two.module.css
@@ -3,9 +3,8 @@
   box-shadow: 0px 4px 5px 3px rgba(0, 0, 0, 0.05);
   border-radius: 40px 40px 0px 0px;
   width: 100%;
-  margin: 1rem 2rem 0 2rem;
   position: relative;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
   flex: 1;
 }
