--- a/src/components/Page/FeaturesSwitch/features_switch.module.css
+++ b/src/components/Page/FeaturesSwitch/features_switch.module.css
@@ -21,7 +21,7 @@
   max-width: 23.75rem;
   width: 100%;
   height: 100%;
-  margin-top: 4rem;
+  margin: 4rem auto 0 auto;
 }
 .features_grid_two_button {
   width: 100%;
