--- a/src/components/Page/CircleDecoration/circle_decoration.module.css
+++ b/src/components/Page/CircleDecoration/circle_decoration.module.css
@@ -1,4 +1,4 @@
-.circle_decoration{
+.circle_decoration {
   width: 6.25rem;
   height: 6.25rem;
   position: absolute;
@@ -6,6 +6,6 @@
   left: 100%;
   box-shadow: 0px 0px 250px 400px rgba(75, 126, 255, 0.1);
 }
-.circle_decoration--left{
-  left: 0
+.circle_decoration--left {
+  left: 0;
 }
