--- a/src/components/Page/QuestionCard/question_card.module.css
+++ b/src/components/Page/QuestionCard/question_card.module.css
@@ -1,7 +1,7 @@
 .card {
   width: 100%;
   padding: 1.5rem 0;
-  border-bottom: 1px solid var(--black-10)
+  border-bottom: 1px solid var(--black-10);
 }
 .card_title {
   width: 100%;
@@ -35,14 +35,14 @@
   margin-top: 1rem;
   overflow: hidden;
 }
-.--active{
+.--active {
   rotate: 180deg;
 }
 @media (min-width: 720px) {
-  .card h6{
+  .card h6 {
     font: normal normal 700 1.1rem/1.5rem var(--font-primary);
   }
-  .card p{
-  font: normal normal 400 1rem/1.5rem var(--font-primary);
+  .card p {
+    font: normal normal 400 1rem/1.5rem var(--font-primary);
   }
 }
